@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19941016
+MANIFEST for ded, version t19941019
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
